# optical_flow

./: CMakeLists.txt  README.md
opticalflow/: cgo.go  cgo_dense_optical_flow.go  cgo_dual_tvl1.go  cgo_dual_tvl1_test.go  dense_optical_flow.cpp  dense_optical_flow.h  dual_tvl1_optical_flow.cpp  dual_tvl1_optical_flow.h
opticalflow_cuda/: cgo.go  cgo_dense_optical_flow_cuda.go  cgo_dual_tvl1_cuda.go  cgo_dual_tvl1_cuda_test.go  dense_optical_flow_cuda.cpp  dense_optical_flow_cuda.h  dual_tvl1_optical_flow_cuda.cpp  dual_tvl1_optical_flow_cuda.h
opticalflow_cuda_test/: app.cpp  app.h  main.c
opticalflow_test/: app.cpp  app.h  main.c
